--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
       </div>
       <div class="row  mb-3 text-center d-flex justify-content-center">
           <h5> Email: info.medfordtech@gmail.com</h5>
-          <h6>2<sup>nd</sup> floor,Sona Incubation Foundation, valliappa block ,sona
+          <h6>Sona Incubation Foundation, valliappa block ,sona
               campus,Salem-5</h6>
       </div>
       <!--Grid row-->
