--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
 
 
             <div class="col-md-6 col-sm-12 shadow p-5 mb-5 bg-white " id="product-contanier-description">
-                <h2 class="p-2">H2O2 sterlixer</h2>
+                <h2 class="p-2">H2O2 sterilizer</h2>
                 <h4 class="p-2">product description</h4>
                 <p class="p-4">Our sterilizer system utilizes the combination of hydrogen peroxide and low temperature
                     gas
